--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
             <artifactId>json</artifactId>
             <version>20170516</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.messenger4j</groupId>
+            <artifactId>messenger4j</artifactId>
+            <version>0.8.0</version>
+        </dependency>
     </dependencies>
 
 </project>
