--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,18 @@
             <artifactId>messenger4j</artifactId>
             <version>0.8.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.ibm.watson.developer_cloud</groupId>
+            <artifactId>java-sdk</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.ibm.watson.developer_cloud</groupId>
+            <artifactId>conversation</artifactId>
+            <version>4.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
